--- a/Project4/Web.config
+++ b/Project4/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="DESKTOP-08M69M0\SQLEXPRESS;Initial Catalog=aspnet-Project4-20210221082702;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-	  <!--<add name="DefaultConnection" connectionString="DESKTOP-CMEU5OQ\SQLEXPRESS;Initial Catalog=aspnet-Project4-20210221082702;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="DESKTOP-179HO0M\SQLEXPRESS;Initial Catalog=aspnet-Project4-20210221082702;Integrated Security=True" providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="DESKTOP-CMEU5OQ\SQLEXPRESS;Initial Catalog=aspnet-Project4-20210221082702;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="DESKTOP-179HO0M\SQLEXPRESS;Initial Catalog=aspnet-Project4-20210221082702;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
