--- a/Project4/Project4.csproj
+++ b/Project4/Project4.csproj
@@ -184,9 +184,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202103161526355_themBangBanGiaoPhamNhan.cs" />
-    <Compile Include="Migrations\202103161526355_themBangBanGiaoPhamNhan.Designer.cs">
-      <DependentUpon>202103161526355_themBangBanGiaoPhamNhan.cs</DependentUpon>
+    <Compile Include="Migrations\202103191523019_suabangBenh.cs" />
+    <Compile Include="Migrations\202103191523019_suabangBenh.Designer.cs">
+      <DependentUpon>202103191523019_suabangBenh.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -197,6 +197,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Khu.cs" />
     <Compile Include="Models\LaoDongCongIch.cs" />
+    <Compile Include="Models\LaoDongCongIchToView.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\PhamNhan.cs" />
     <Compile Include="Models\PhongGiam.cs" />
@@ -478,8 +479,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202103161526355_themBangBanGiaoPhamNhan.resx">
-      <DependentUpon>202103161526355_themBangBanGiaoPhamNhan.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202103191523019_suabangBenh.resx">
+      <DependentUpon>202103191523019_suabangBenh.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
