--- a/Project4/Project4.csproj
+++ b/Project4/Project4.csproj
@@ -190,28 +190,18 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202103191523019_suabangBenh.cs" />
-    <Compile Include="Migrations\202103191523019_suabangBenh.Designer.cs">
-      <DependentUpon>202103191523019_suabangBenh.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AnXa.cs" />
-<<<<<<< HEAD
     <Compile Include="Models\BanGiaoPhamNhan.cs" />
-=======
     <Compile Include="Models\AnXaParam.cs" />
->>>>>>> 1439f1cc4c1ae0c0eac42faa59d45066190de158
     <Compile Include="Models\Benh.cs" />
     <Compile Include="Models\CheDoNghiPhepCuaQuanNguc.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Khu.cs" />
     <Compile Include="Models\LaoDongCongIch.cs" />
-<<<<<<< HEAD
     <Compile Include="Models\LaoDongCongIchToView.cs" />
-=======
     <Compile Include="Models\LaoDongCongIchesParam.cs" />
->>>>>>> 1439f1cc4c1ae0c0eac42faa59d45066190de158
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\NghiPhepQuanNgucParams.cs" />
     <Compile Include="Models\PhamNhan.cs" />
@@ -485,6 +475,7 @@
     <Content Include="Views\Benhs\_BenhSearchBar.cshtml" />
     <Content Include="Views\QuanNgucs\_Details.cshtml" />
     <Content Include="Views\CheDoNghiPhepCuaQuanNgucs\_PhongDamNhiemBoi.cshtml" />
+    <Content Include="Views\PhamNhans\_PhongPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -497,11 +488,6 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202103191523019_suabangBenh.resx">
-      <DependentUpon>202103191523019_suabangBenh.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
